# non-sam

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.c  main.h  miniaudio.h  phoneme_adjust.c  phoneme_adjust.h  phoneme_to_wave.c  phoneme_to_wave.h  play_wave.c  play_wave.h  prints.c  prints.h  text_to_phoneme.c  text_to_phoneme.h  text_to_text.c  text_to_text.h
